# sinan-local

./: README.md
benchmarks/hotelReservation/: README.md  config.json  docker-compose-ath8.yml  docker-compose-ath9.yml  docker-compose.yml
benchmarks/social-network/: docker-compose-swarm-labeled.yml  docker-compose-swarm.yml  docker-compose.yml  social_network.thrift
benchmarks/socialNetwork-ml-swarm/: MediaFilterDebugDockerfile  MediaFilterDockerfile  TestTextFilterDockerfile  TextFilterDockerfile  docker-compose-media-filter-debug.yml  docker-compose-media-filter.yml  docker-compose-swarm-gcp.yml  docker-compose-swarm-single-node.yml  docker-compose-swarm.yml  docker-compose-text-filter-debug.yml  docker-compose-text-filter.yml  docker-compose.yml  requirements.txt  social_network.thrift
benchmarks/socialNetwork-ml-swarm/src/HomeTimelineService/: CMakeLists.txt  HomeTimelineHandler.h  HomeTimelineService.cpp
benchmarks/socialNetwork-ml-swarm/src/WriteUserTimelineService/: CMakeLists.txt  WriteUserTimelineService.cpp
data_proc/: count_cpu.py  count_cpu_hotel.py  plot.py
docker_swarm/: deploy_bench.py  master_data_collect_ath_hotel.py  master_data_collect_ath_social.py  master_deploy_ath_hotel.py  master_deploy_ath_social.py  master_deploy_diurnal_ath_hotel.py  master_deploy_diurnal_ath_social.py  master_test_docker_service_scale.py  setup_swarm_cluster.py  slave_data_collect_ath_social.py
locust/: docker-compose-hotel.yml  docker-compose-socialml.yml  stress_test.py
ml_docker_swarm/: data_parser_hotel_next_k.py  data_parser_socialml_next_k.py  hotel_reserve_predictor.py  social_media_predictor.py  train_cnvnet.py  train_hotel_cnvnet.py  xgb_explain.py  xgb_train_hotel_latent.py  xgb_train_latent.py
(+636 files in other folders)
